# TimeOptimalAttitudeControl

./: .gitignore  CMakeLists.txt  README.md
Deliverables/: Final Presentation.pptx  Mid-Term Presentation.pptx  report_figures.pptx
Deliverables/Diagrams/: Diagrams.drawio
Presentations/: .~Mid-Term Presentation.pptx  Mid-Term Presentation.pptx
Results/MCS/asymmetric/: no_pso.csv  pso_full.csv  pso_sto.csv
Results/MCS/rest/: lhs_samples.csv  pso_sto.csv
Results/MCS/track/: no_pso.csv  pso_full.csv
Results/solver/fatrop/45/: results.txt
cgpops/: Makefile  cgpopsAuxDec.hpp  cgpopsAuxExt.hpp  cgpopsIPOPTSolutionHD.m  cgpopsIPOPTSolutionHD0.m  cgpopsMeshHistoryColPtsHDdata.m  cgpopsMeshHistoryColPtsHDdata0.m  cgpopsMeshHistoryFracsHDdata.m  cgpopsMeshHistoryFracsHDdata0.m  cgpopsMeshHistoryMaxErrHDdata.m  cgpopsMeshHistoryMaxErrHDdata0.m  cgpopsMeshHistoryPhasePtsHDdata.m  cgpopsMeshHistoryPhasePtsHDdata0.m  cgpopsMeshHistoryPhaseSegsHDdata.m  cgpopsMeshHistoryPhaseSegsHDdata0.m  cgpopsMeshHistoryTimesHDdata.m  cgpopsMeshHistoryTimesHDdata0.m  cgpopsResultsMatMatdata.m  cgpops_gov.cpp  cgpops_main.cpp  cgpops_main.hpp  cgpops_wrapper.cpp  helper_functions.cpp  helper_functions.h  ipoptINFO.txt  run_cgpops
code_gen/: dynamics.c  dynamics.h  solver.c  solver.h
include/: helper_functions.h
include/cgpops/: cgpopsAuxDec.hpp  cgpopsAuxExt.hpp  cgpops_gov.hpp  cgpops_main.hpp  helper_functions.h
include/toac/: ca.py  casadi_callback.h  constraints.h  cuda.h  cuda_dynamics.h  cuda_optimizer.h  cuda_rk4.h  dynamics.h  external_dyn.h  helper_functions.h  lhs.h  optimizer.h  plots.h  pso.h  symmetric_spacecraft.h
input/: initial_guess.csv  ipoptOPTIONS.txt
output/: smooth_trajectory.csv  trajectory.csv
output/mcs/asym/: cgpops.csv  lhs_samples.csv
output/mcs/rest/: cgpops.csv  cgpops_1.csv  no_pso.csv  pso_full.csv
output/mcs/track/: cgpops.csv  pso_sto.csv
output/pso_params/: lhs_pso_params_full_samples_1.csv  lhs_pso_params_full_samples_10.csv  lhs_pso_params_full_samples_11.csv  lhs_pso_params_full_samples_12.csv  lhs_pso_params_full_samples_13.csv  lhs_pso_params_full_samples_14.csv  lhs_pso_params_full_samples_15.csv  lhs_pso_params_full_samples_16.csv  lhs_pso_params_full_samples_17.csv  lhs_pso_params_full_samples_18.csv  lhs_pso_params_full_samples_19.csv  lhs_pso_params_full_samples_2.csv  lhs_pso_params_full_samples_20.csv  lhs_pso_params_full_samples_3.csv  lhs_pso_params_full_samples_4.csv  lhs_pso_params_full_samples_5.csv  lhs_pso_params_full_samples_6.csv  lhs_pso_params_full_samples_7.csv  lhs_pso_params_full_samples_8.csv  lhs_pso_params_full_samples_9.csv  lhs_pso_params_sto_samples_1.csv  lhs_pso_params_sto_samples_10.csv  lhs_pso_params_sto_samples_11.csv  lhs_pso_params_sto_samples_12.csv  lhs_pso_params_sto_samples_13.csv  lhs_pso_params_sto_samples_14.csv  lhs_pso_params_sto_samples_15.csv  lhs_pso_params_sto_samples_16.csv  lhs_pso_params_sto_samples_17.csv  lhs_pso_params_sto_samples_18.csv  lhs_pso_params_sto_samples_19.csv  lhs_pso_params_sto_samples_2.csv  lhs_pso_params_sto_samples_20.csv  lhs_pso_params_sto_samples_3.csv  lhs_pso_params_sto_samples_4.csv  lhs_pso_params_sto_samples_5.csv  lhs_pso_params_sto_samples_6.csv  lhs_pso_params_sto_samples_7.csv  lhs_pso_params_sto_samples_8.csv  lhs_pso_params_sto_samples_9.csv  (+41 more)
output/pso_params/sim_2000_100/: lhs_pso_params_samples_1.csv  lhs_pso_params_samples_10.csv  lhs_pso_params_samples_11.csv  lhs_pso_params_samples_12.csv  lhs_pso_params_samples_13.csv  lhs_pso_params_samples_14.csv  lhs_pso_params_samples_15.csv  lhs_pso_params_samples_16.csv  lhs_pso_params_samples_17.csv  lhs_pso_params_samples_18.csv  lhs_pso_params_samples_19.csv  lhs_pso_params_samples_2.csv  lhs_pso_params_samples_20.csv  lhs_pso_params_samples_3.csv  lhs_pso_params_samples_4.csv  lhs_pso_params_samples_5.csv  lhs_pso_params_samples_6.csv  lhs_pso_params_samples_7.csv  lhs_pso_params_samples_8.csv  lhs_pso_params_samples_9.csv  lhs_pso_samples.csv  pso_full_tuning_1.csv  pso_full_tuning_10.csv  pso_full_tuning_11.csv  pso_full_tuning_12.csv  pso_full_tuning_13.csv  pso_full_tuning_14.csv  pso_full_tuning_15.csv  pso_full_tuning_16.csv  pso_full_tuning_17.csv  pso_full_tuning_18.csv  pso_full_tuning_19.csv  pso_full_tuning_2.csv  pso_full_tuning_20.csv  pso_full_tuning_3.csv  pso_full_tuning_4.csv  pso_full_tuning_5.csv  pso_full_tuning_6.csv  pso_full_tuning_7.csv  pso_full_tuning_8.csv  (+21 more)
src/: c_code_gen.cpp  c_code_gen_sol.cpp  debug_fatrop.py
src/cgpops/: cgpopsAuxDec.hpp  cgpopsFuncDef.cpp  cgpops_gov.hpp  cgpops_wrapper.cpp
src/lib/: CUDAdynamics.cu  CUDAoptimizer.cpp  CustomCallback.cpp  animation.py  constraints.cpp  cudaRK4.cu  dynamics.cpp  external_dyn.cpp  helper_functions.cpp  lhs.cpp  mcs_plotter.py  new_pso.cu  optimizer.cpp  optimizer_2.cpp  plot_csv_data.py  plots.cpp  pso.cu  symmetricspaceraft.h  traj_opt.py
src/lib/cgpops/: animation.py  cgpops_gov.cpp  cgpops_main.cpp  helper_functions.cpp
src/lib/toac/: CUDAoptimizer.cpp  CustomCallback.cpp  animation.py  external_cvodes.cpp  external_rk4.cpp  mcs_plotter.py  new_pso.cu  optimizer.cpp  plot_csv_data.py  pso.cu
src/montecarlo/: mcs.cpp  mcs_cgpops.cpp  mcs_no_pso.cpp  mcs_plotter.cpp  mcs_plotter.py  mcs_pso_full.cpp  mcs_pso_sto.cpp  pso_params.cpp  pso_sample_gen.cpp  pso_time.cpp  pso_tuner.cpp  sample_generator.cpp
src/parallel/: c_code_gen.cpp  main.cpp  main_code_gen.cpp  test_code_gen.cpp
src/serial/: c_code_gen.cpp  main.cpp  main_code_gen.cpp  main_pso.cpp  pso_only.cpp
tests/: CUDAdynamics.cu  attitude_dynamics.cu  batch_qr.cu  cudaDyn  cuda_dynamics  cuda_dynamics.h  cuda_dzn  cudadynamics  cvodes  cvodes.cu  cvodes_coupled  cvodes_coupled.cu  cvodes_cuda  dense  dense_jacobian.cu  dyn  dyn.cpp  dyn.h  dynamics.c  dynamics.h  example.cpp  external_dynamics.cpp  external_dynamics.h  helper_functions.cpp  helper_functions.h  lhs.cpp  new_pso.cu  new_pso.h  next_steps.txt  noes.txt  notes.txt  optimal_trajectory.csv  plot_csv_data.py  pso  pso.cu  pso.h  pso_class_test.cpp  serial  serial.cpp  singleVSdoublePrecision  (+15 more)
(+30 files in other folders)
